# DataStructure

./: CMakeLists.txt
01SerialList/dynamicArray/: dynamicArray.c  dynamicArray.h  usingDynamicArray.c
01SerialList/linkList/: linkList.c  linkList.h  usingLinkList.c
01SerialList/queueByLinkList/: queueByLinkList.c  queueByLinkList.h  usingQueueByLinkList.c
01SerialList/queueSequenceByDynamicArray/: queueSequenceByDynamicArray.c  queueSequenceByDynamicArray.h  usingQueueSequenceByDynamicArray.c
01SerialList/stackLinkList/: stackLinkList.c  stackLinkList.h  usingStackLinkList.c
01SerialList/stackSequence/: stackSequence.c  stackSequence.h  usingStackSequence.c
02String/stringDynamic/: stringDynamic.c  stringDynamic.h  usingStringDynamic.c
02String/stringFixedLength/: stringFixedLength.c  stringFixedLength.h  usingStringFixedLength.c
03Matrix/matrixByArray/: matrixByArray.c  matrixByArray.h  usingMatrixByArray.c
03Matrix/spareMatrixByArray/: spareMatrixByArray.c  spareMatrixByArray.h  usingSpareMatrixByArray.c
03Matrix/spareMatrixByCrossLink/: spareMatrixByCrossLink.c  spareMatrixByCrossLink.h  usingSpareMatrixByCrossLink.c
04Tree/avlSortTree/: avlSortTree.c  avlSortTree.h  usingAvlSortTree.c
04Tree/binarySortTree/: binarySortTree.c  binarySortTree.h  usingBinarySortTree.c
04Tree/binaryTree/: binaryTree.c  binaryTree.h  usingBinaryTree.c
05Graph/aoeGraphAdjacencyList/: aoeGraphAdjacencyList.c  aoeGraphAdjacencyList.h  usingAoeGraphAdjacencyList.c
05Graph/aovGraphAdjacencyList/: aovGraphAdjacencyList.c  aovGraphAdjacencyList.h  usingAovGraphAdjacencyList.c
05Graph/directGraphAdjacencyList/: directGraphAdjacencyList.c  directGraphAdjacencyList.h  usingDirectGraphAdjacencyList.c
05Graph/directGraphAdjacencyMatrix/: directGraphAdjacencyMatrix.c  directGraphAdjacencyMatrix.h  usingDirectGraphAdjacencyMatrix.c
05Graph/undirectGraphAdjacencyMatrix/: undirectGraphAdjacencyMatrix.c  undirectGraphAdjacencyMatrix.h  usingUnDirectGraphAdjacencyMatrix.c
06Sort/insertSort/: insertSort.c  insertSort.h  usingInsertSort.c
06Sort/mergeSort/: mergeSort.c  mergeSort.h  usingMergeSort.c
06Sort/selectSort/: selectSort.c  selectSort.h  usingSelectSort.c
06Sort/swipSort/: swipSort.c  swipSort.h  usingSwipSort.c
07Search/bstDict/: bstDict.c  bstDict.h  usingBstDict.c
07Search/hashDict/: hashDict.c  hashDict.h  usingHashDict.c
08Search/dictByBinarySortTree/: dictByBinarySortTree.c  dictByBinarySortTree.h  usingDictByBinarySortTree.c
